# hiding-adversarial-activity-from-behaviour-based-detection-thesis

./: .gitignore  Pipfile  README.md  build-requirements.txt  dev-requirements.txt  pyproject.toml  setup.py
data/: README.md  all.csv  test.csv
docs/: build_instructions.md  conf.py  index.md
models/: README.md  stage1_ocsvm.p  stage1_ocsvm_100k.p  stage1_ocsvm_model.p  stage1_ocsvm_scaler.p
scripts/: convert_to_flow.sh  mtu_test.sh
src/explain_nids/: __about__.py  __init__.py  compare.py  dataset.py  encoder.py  predict.py  template.py  typing.py
src/explain_nids/cf/: callback.py  explain.py  reward.py  train_counterfactual_rl.py
src/explain_nids/shap/: calculate.py  draw.py
