[build-system]
requires = [
    # The minimum setuptools version is specific to the PEP 517 backend,
    # and may be stricter than the version required in `setup.py`
    "setuptools>=40.6.0",
    "nuitka",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "explain_nids"
dynamic = ["version", "authors", "license", "readme"]

[project.scripts]
train-cfrl = "explain_nids.cf.train_counterfactual_rl:main"
train-autoencoder = "explain_nids.encoder:main"
