[build-system]
requires = [
    # The minimum setuptools version is specific to the PEP 517 backend,
    # and may be stricter than the version required in `setup.py`
    "setuptools>=40.6.0",
    "nuitka",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "explain_nids"
dynamic = ["version", "authors", "license", "readme"]

[project.scripts]
train-cfrl = "explain_nids.cf.train_counterfactual_rl:main"
train-autoencoder = "explain_nids.encoder:main"
shap-calculate = "explain_nids.shap.calculate:main"
shap-draw = "explain_nids.shap.draw:main"
get-anomaly-score = "explain_nids.anomaly_detector.get_anomaly_score:main"
flow-diff = "explain_nids.compare:main"
